--- a/.github/workflows/caddy_build.yaml
+++ b/.github/workflows/caddy_build.yaml
@@ -45,7 +45,7 @@ jobs:
         id: metadata
         with:
           images: |
-            ghcr.io/${{ github.actor }}/${{ env.DOCKER_NAME }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.DOCKER_NAME }}
           tags: |
             type=semver,pattern={{version}},value=v${{ steps.version.outputs.version }}
             type=semver,pattern={{major}}.{{minor}},value=v${{ steps.version.outputs.version }}
@@ -76,8 +76,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and publish container image
         uses: docker/build-push-action@v6
